tests/baselines/reference/declarationEmitDefaultExport3.errors.txt
tests/cases/compiler/declarationEmitDefaultExport3.ts(1,25): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/declarationEmitDefaultExport3.ts (1 errors) ====
    export default function foo() {
                            ~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        return ""
    }